--- a/src/row.css
+++ b/src/row.css
@@ -1,10 +1,34 @@
+.row{
+    margin-left: 20px;
+}
+
 .row__posters{
     display:flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding: 20px;
+}
+
+.row__posters::-webkit-scrollbar{
+    display: none;
 }
 
 .row_posters{
     object-fit:contain;
     width: 100%;
     max-height: 100px;
+    margin-right: 10px;
+    transition: transform 450ms;
 }
 
+.row_posters:hover{
+    transform: scale(1.08);
+}
+
+.row_posterLarge{
+    max-height: 250px;
+}
+
+.row_posterLarge:hover{
+    transform: scale(1.09);
+}
