--- a/src/row.css
+++ b/src/row.css
@@ -1,35 +1,35 @@
-.row{
+.row {
+    color: #fff;
     margin-left: 20px;
-    color: white;
-}
-
-.row__posters{
-    display:flex;
-    overflow-x: scroll;
+  }
+  
+  .row_posters {
+    display: flex;
     overflow-y: hidden;
+    overflow-x: scroll;
     padding: 20px;
-}
-
-.row__posters::-webkit-scrollbar{
+  }
+  
+  .row_posters::-webkit-scrollbar {
     display: none;
-}
-
-.row_posters{
-    object-fit:contain;
+  }
+  
+  .row_poster {
+    object-fit: contain;
     width: 100%;
     max-height: 100px;
     margin-right: 10px;
     transition: transform 450ms;
-}
-
-.row_posters:hover{
-    transform: scale(1.08);
-}
-
-.row_posterLarge{
+  }
+  
+  .row_poster:hover {
+    transform: scale(1.1);
+  }
+  
+  .row_posterLarge {
     max-height: 250px;
-}
-
-.row_posterLarge:hover{
-    transform: scale(1.09);
-}
+  }
+  
+  .row_posterLarge:hover {
+    transform: scale(1.11);
+  }
